apps/kafka/manifests/4-statefullset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: kafka
spec:
  serviceName: "kafka-service"
  replicas: 3
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:latest
          ports:
            - containerPort: 9092
              name: kafka
            - containerPort: 9093
              name: controller

          command:
            - "/bin/bash"
            - "-c"
            - |
              [...]
          volumeMounts:
            - name: kafka-storage
              mountPath: /var/lib/kafka/data
      # volumes:
      #   - name: kafka-storage
      #     persistentVolumeClaim:
      #       claimName: kafka-pvc

 # Usamos volumeClaimTemplates para que cada réplica tenha seu próprio PVC
  volumeClaimTemplates:
  - metadata:
      name: kafka-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
